--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <main class="main">
         <section class="section products">
             <div class="section__wrapper products__wrapper">
-                <div class="products__item"></div>
-                <div class="products__item"></div>
-                <div class="products__item"></div>
+                <div class="products__item">
+                    <h3>Прозрачная PET пленка</h3>
+                </div>
+                <div class="products__item">
+                    <h3>Белая PP пленка</h3>
+                </div>
+                <div class="products__item">
+                    <h3>Белая PET пленка</h3>
+                </div>
             </div>
         </section>
         <section class="section samples" style="margin-bottom: 50px;">
